updated on 17 sep 2020

--- a/JavaSeleniumProject/logByProperties/application.html
+++ b/JavaSeleniumProject/logByProperties/application.html
@@ -121,3 +121,249 @@ Log session start time Mon Sep 07 10:50:57 EDT 2020<br>
 <td>Log4jPropertiesFileExample.java:83</td>
 <td title="Message">Browser quit</td>
 </tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Thu Sep 17 01:22:15 EDT 2020<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:27</td>
+<td title="Message">Browser opened</td>
+</tr>
+
+<tr>
+<td>6032</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:34</td>
+<td title="Message">Clicked on Register</td>
+</tr>
+
+<tr>
+<td>9831</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:37</td>
+<td title="Message">Entering contact information</td>
+</tr>
+
+<tr>
+<td>10667</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:45</td>
+<td title="Message">Entering Mailing Information</td>
+</tr>
+
+<tr>
+<td>11411</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:52</td>
+<td title="Message">Selecting Country</td>
+</tr>
+
+<tr>
+<td>12008</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:58</td>
+<td title="Message">Entering User Information</td>
+</tr>
+
+<tr>
+<td>12428</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:64</td>
+<td title="Message">Clicked on Submit button</td>
+</tr>
+
+<tr>
+<td>18023</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:69</td>
+<td title="Message">Validation started</td>
+</tr>
+
+<tr>
+<td>18058</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:73</td>
+<td title="Message">Validation DONE</td>
+</tr>
+
+<tr>
+<td>18058</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:80</td>
+<td title="Message">Exit Test</td>
+</tr>
+
+<tr>
+<td>19361</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:83</td>
+<td title="Message">Browser quit</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Thu Sep 17 01:24:08 EDT 2020<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:27</td>
+<td title="Message">Browser opened</td>
+</tr>
+
+<tr>
+<td>10912</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:34</td>
+<td title="Message">Clicked on Register</td>
+</tr>
+
+<tr>
+<td>13318</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:37</td>
+<td title="Message">Entering contact information</td>
+</tr>
+
+<tr>
+<td>13828</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:45</td>
+<td title="Message">Entering Mailing Information</td>
+</tr>
+
+<tr>
+<td>14263</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:52</td>
+<td title="Message">Selecting Country</td>
+</tr>
+
+<tr>
+<td>14443</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:58</td>
+<td title="Message">Entering User Information</td>
+</tr>
+
+<tr>
+<td>14794</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:64</td>
+<td title="Message">Clicked on Submit button</td>
+</tr>
+
+<tr>
+<td>20277</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:69</td>
+<td title="Message">Validation started</td>
+</tr>
+
+<tr>
+<td>20304</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:73</td>
+<td title="Message">Validation DONE</td>
+</tr>
+
+<tr>
+<td>20305</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:80</td>
+<td title="Message">Exit Test</td>
+</tr>
+
+<tr>
+<td>21106</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="Log4jExample category">Log4jExample</td>
+<td>Log4jPropertiesFileExample.java:83</td>
+<td title="Message">Browser quit</td>
+</tr>
